# automapper

./: Cargo.toml  README.md  output.rs
crates/automapper/: Cargo.toml  README.md
crates/automapper-cli/: Cargo.toml
crates/automapper-cli/src/: main.rs
crates/automapper-proc/: Cargo.toml
crates/automapper-proc/src/: lib.rs  mapper.rs  rodc_util.rs  struct_to_struct_mapping.rs  type_to_type_mapping.rs
crates/automapper-proc/src/mapper/: enums.rs  structs.rs
crates/automapper-proc/src/models/: context.rs
crates/automapper-proc/src/rodc_util/: search.rs
crates/automapper-proc/src/type_to_type_mapping/: enums.rs  structs.rs
crates/automapper/src/: lib.rs  rodc_util.rs  struct_to_struct_mapping.rs
crates/automapper/src/models/: context.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/derive/: Cargo.toml  rustdoc_sample.json
crates/derive/src/: lib.rs  rdoc_parser.rs  rustdoc_json.rs  rustdoc_json_parser.rs
crates/derive/src/rdoc_parser/: models.rs
crates/derive/src/rdoc_parser/models/: cache.rs  ctx.rs  fq_ident.rs
crates/derive/src/rustdoc_json/: models.rs
crates/derive/src/rustdoc_json_parser/: models.rs
crates/derive/src/rustdoc_json_parser/models/: cache.rs  ctx.rs  fq_ident.rs  path_dict.rs
crates/usage/: Cargo.toml  build.rs  gen.sh  output.rs  rustdoc.json  rustdoc_v2.json
crates/usage/protos/: models.proto
crates/usage/src/: gen.rs  lib.rs  models.rs  output.rs  v2.rs
crates/usage/src/protogen/: example.rs  mod.rs
crates/usage/src/v2/: mod.rs  models.rs
crates/usage/tests/: enums.rs  optional.rs  result.rs  structs.rs
