[workspace]
members = [ "crates/automapper",
    "crates/automapper-proc",
    "crates/cli",
    "crates/derive",
    "crates/usage",
]

[workspace.dependencies]
rustdoc-json = "0.9.2"
anyhow = "1.0.91"
proc-macro2 = "1"
quote = "1"
rustdoc-types = "0.32.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
syn = "2"
thiserror = "1.0.65"
tracing = "0.1.40"
walkdir = "2.3"
