[package]
name = "automapper-proc"
description = "Procedural macro for automapper - please use `automapper` crate"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
documentation = "https://docs.rs/automapper/"
repository = "https://github.com/mustakimali/automapper"
categories = ["development-tools"]
publish = true

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustdoc-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustdoc-json = { workspace = true }
walkdir = { workspace = true }
derivative = "2.2.0"
