[package]
name = "lazy-to-map-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.91"
proc-macro2 = "1"
quote = "1"
rustdoc-types = "0.32.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
syn = "2"
thiserror = "1.0.65"
tracing = "0.1.40"
