[package]
name = "lazy-to-map-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustdoc-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustdoc-json = { workspace = true }
walkdir = { workspace = true }
derivative = "2.2.0"
