[package]
name = "usage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
automapper = { path = "../automapper" }
automapper-proc = { path = "../automapper-proc" }
rustdoc-json = { workspace = true }
grpc-build-core = "0.3.0"
prost = "0.13.3"

[build-dependencies]
grpc-build = "6.1.1"
